--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,7 +40,7 @@
             <div class="page-header">
                 <h1 id="Contact" class="anchor-fix">Contact</h1>
             </div>
-            <p>The simplest and safest way to contact me is through email at <a href="mailto:dj.mikeallison@gmail.com">dj.mikeallison@gmail.com</a>.</p>
+            <p>The simplest and safest way to contact me is through email at <a href="mailto:mike@mikeallisononline.com">mike@mikeallisononline.com</a>.</p>
         </div>
     </div>
 </div>
