--- a/views/projects/KODataTable.hbs
+++ b/views/projects/KODataTable.hbs
@@ -27,6 +27,11 @@
 (nuget): Package-Install KODataTable
 (optional): Package-Install jTableScroll</pre></p>
 
+<p class="lead">Add-on Modules</p>
+<P>
+    <a href="https://github.com/rgeerts/KODataTable-dragable">Draggable Columns</a>
+</P>
+
 <p class="lead">Html</p>
 <p>
 <pre class="prettyprint">
