add module for koDataTable

--- a/views/projects/KODataTable.hbs
+++ b/views/projects/KODataTable.hbs
@@ -29,7 +29,8 @@
 
 <p class="lead">Add-on Modules</p>
 <P>
-    <a href="https://github.com/rgeerts/KODataTable-dragable">Draggable Columns</a>
+    <a href="/projects/jTableScroll">Reactive Scrolling</a><br />
+    <a href="https://github.com/rgeerts/KODataTable-dragable" target="_blank">Draggable Columns</a>
 </P>
 
 <p class="lead">Html</p>
