--- a/views/partials/resume.hbs
+++ b/views/partials/resume.hbs
@@ -150,6 +150,7 @@
                     <tr><td>Express</td></tr>
                     <tr><td>Gulp</td></tr>
                     <tr><td>Grunt</td></tr>
+                    <tr><td>Handlebars</td></tr>
                     <tr><td>AjaxControlToolkit</td></tr>
                     <tr><td>LinQ</td></tr>
                     <tr><td>SignalR</td></tr>
