--- a/views/partials/resume.hbs
+++ b/views/partials/resume.hbs
@@ -378,7 +378,8 @@
     <div class="page-header">
         <h2 id="Employment" class="anchor-fix">Current Employment</h2>
     </div>
-    <h3 class="anchor-fix">Compass Learning</h3>
+    <p class="pull-right"><a href="http://www.compasslearning.com" target="_blank"><img src="/images/cl.jpg" alt="compasslearning" class="img-rounded" /></a></p>
+    <h3 class="anchor-fix">CompassLearning</h3>
     <p>Employed: 2015-present</p>
     <p>Website: <a href="http://www.compasslearning.com" target="_blank">www.compasslearning.com</a></p>
     <p>Position: Consultant</p>
