--- a/views/projects/angularTablescroll.hbs
+++ b/views/projects/angularTablescroll.hbs
@@ -147,4 +147,7 @@ backgroundcolor: (string)(optional)(default: #fffff) table header bg color
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-tablescroll/angular-tablescroll.js"></script>
+    <script>
+        angular.module('ngTablescrollSample', ['ngTablescroll']);
+    </script>
 {{/contentFor}}
