new ko-datatable

--- a/views/projects/KODataTable.hbs
+++ b/views/projects/KODataTable.hbs
@@ -1,6 +1,10 @@
 <h5>Changelog</h5>
 <hr>
 <blockquote>
+    <p>1.0.4</p>
+    <small>Fix minor paging issue</small>
+</blockquote>
+<blockquote>
     <p>1.0.2</p>
     <small>Fix auto-search throttling</small>
 </blockquote>
