new ko-datatable

--- a/views/projects/KODataTable.hbs
+++ b/views/projects/KODataTable.hbs
@@ -74,8 +74,8 @@
 <h5>Javascript</h5>
 <hr>
 <pre class="prettyprint">
-&lt;script src="KODataTable-1.0.2.js"&gt;&lt;/script&gt;
-&lt;script src="jquery.jTableScroll-1.6.0.js"&gt;&lt;/script&gt;
+&lt;script src="KODataTable.js"&gt;&lt;/script&gt;
+&lt;script src="jquery.jTableScroll.js"&gt;&lt;/script&gt;
 &lt;script>
     var TableDataVM = new KODataTable({ options });
     ko.applyBindings(TableDataVM, document.getElementById("kodt"));
