--- a/views/partials/resume.hbs
+++ b/views/partials/resume.hbs
@@ -101,6 +101,7 @@
                         <tr><td>ASP.Net (MVC, Web API)</td></tr>
                         <tr><td>JQuery</td></tr>
                         <tr><td>Bootstrap</td></tr>
+                        <tr><td>Materialize</td></tr>
                         <tr><td>Backbone</td></tr>
                         <tr><td>XLI</td></tr>
                         <tr><td>XLI-NG</td></tr>
