--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -58,7 +58,8 @@
     {{{body}}}
 </main>
 <footer class="page-footer">
-    <div>&copy; Mike Allison {{year}}</div>
+    <div class="left">&copy; Mike Allison {{year}}</div>
+    <div class="right">Powered by Node.JS on <a href="https://www.digitalocean.com/?refcode=5055d4df6a13" target="_blank">DigitalOcean</a> </div>
 </footer>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/materialize/dist/js/materialize.min.js"></script>
