--- a/views/partials/projects.hbs
+++ b/views/partials/projects.hbs
@@ -1,9 +1,9 @@
-<div id="Projects" class="card anchor-fix">
+<div class="card">
     <div class="card-title">
         <span>Projects</span>
     </div>
     {{#each projects}}
-        <div class="card-content" id="Projects-{{this.title}}">
+        <div class="card-content">
             <h5>{{this.title}}</h5>
             {{this.description}}
         </div>
