--- a/views/project.hbs
+++ b/views/project.hbs
@@ -1,5 +1,5 @@
 {{!< layout}}
-<div class="container" id="Projects">
+<div class="container">
     <div class="card">
         <div class="card-title">
             {{project.title}}
