simplify route code remove uneeded dev node modules

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,12 +25,12 @@
                 <li><a id="logo-container" href="/" class="brand-logo">Mike Allison</a></li>
             </ul>
             <ul class="right hide-on-med-and-down">
-                <li><a href="https://github.com/mike-allison" target="_blank" class="waves-effect" title="github"><i class="fa fa-2x fa-github-square "></i></a></li>
-                <li><a href="http://www.linkedin.com/profile/view?id=31355332" target="_blank" class="" title="linked-in"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-                <li><a href="http://twitter.com/mikeallison" target="_blank" class="" title="twitter"><i class="fa fa-2x fa-twitter-square"></i></a></li>
-                <li><a href="https://google.com/+MikeAllisonOnline" target="_blank" class="" title="google +"><i class="fa fa-2x fa-google-plus-square"></i></a></li>
-                <li><a href="http://www.facebook.com/dj.mikeallison" target="_blank" class="" title="facebook"><i class="fa fa-2x fa-facebook-square"></i></a></li>
-                <li><a href="mailto:dj.mikeallison@gmail.com" target="_blank" class="" title="email"><i class="fa fa-2x fa-envelope"></i></a></li>
+                <li><a href="https://github.com/mike-allison" target="_blank" class="waves-effect" title="github"><i class="fa fa-2x fa-github-square"></i></a></li>
+                <li><a href="http://www.linkedin.com/profile/view?id=31355332" target="_blank" class="waves-effect" title="linked-in"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+                <li><a href="http://twitter.com/mikeallison" target="_blank" class="waves-effect" title="twitter"><i class="fa fa-2x fa-twitter-square"></i></a></li>
+                <li><a href="https://google.com/+MikeAllisonOnline" target="_blank" class="waves-effect" title="google +"><i class="fa fa-2x fa-google-plus-square"></i></a></li>
+                <li><a href="http://www.facebook.com/dj.mikeallison" target="_blank" class="waves-effect" title="facebook"><i class="fa fa-2x fa-facebook-square"></i></a></li>
+                <li><a href="mailto:dj.mikeallison@gmail.com" target="_blank" class="waves-effect" title="email"><i class="fa fa-2x fa-envelope"></i></a></li>
             </ul>
         </div>
     </nav>
