enable gzip compression

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='/style/site.css' />
     <link rel='stylesheet' href='/bower_components/font-awesome/css/font-awesome.min.css' />
     {{{block "head"}}}
-    <script src='/bower_components/modernizr/modernizr.js' ></script>
+    <!--<script src='/bower_components/modernizr/modernizr.js' ></script>-->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
