enable gzip compression

--- a/views/partials/resume.hbs
+++ b/views/partials/resume.hbs
@@ -113,6 +113,7 @@
                     <tr><th>Proficient</th></tr>
                     </thead>
                     <tbody>
+                    <tr><td>React</td></tr>
                     <tr><td>Knockback</td></tr>
                     <tr><td>Durandal</td></tr>
                     <tr><td>Entity Framework</td></tr>
@@ -142,17 +143,18 @@
                     <tr><th>Highly Proficient</th></tr>
                     </thead>
                     <tbody>
+                    <tr><td>Webpack</td></tr>
+                    <tr><td>Babel</td></tr>
                     <tr><td>Socket.io</td></tr>
                     <tr><td>Express</td></tr>
                     <tr><td>Gulp</td></tr>
                     <tr><td>Grunt</td></tr>
                     <tr><td>Handlebars</td></tr>
-                    <tr><td>AjaxControlToolkit</td></tr>
-                    <tr><td>LinQ</td></tr>
                     <tr><td>SignalR</td></tr>
-                    <tr><td>Ajax.net</td></tr>
+                    <tr><td>LinQ</td></tr>
+                    <tr><td>lodash</td></tr>
                     <tr><td>Node-webkit</td></tr>
-                    <tr><td>Undercore / lodash</td></tr>
+                    <tr><td>Undercore</td></tr>
                     <tr><td>Q</td></tr>
                     </tbody>
                 </table>
@@ -164,6 +166,8 @@
                     </thead>
                     <tbody>
                     <tr><td>RequireJS</td></tr>
+                    <tr><td>Ajax.net</td></tr>
+                    <tr><td>AjaxControlToolkit</td></tr>
                     <tr><td>jQueryUI</td></tr>
                     <tr><td>Aspose Words</td></tr>
                     <tr><td>TXTextControl.Net</td></tr>
@@ -197,6 +201,7 @@
                     <tbody>
                     <tr><td>Jasmine</td></tr>
                     <tr><td>Karma</td></tr>
+                    <tr><td>Tape</td></tr>
                     <tr><td>Protractor</td></tr>
                     <tr><td>NUnit</td></tr>
                     <tr><td>Visual Studio</td></tr>
