--- a/views/projects/angularLodashString.hbs
+++ b/views/projects/angularLodashString.hbs
@@ -1,13 +1,18 @@
 <h5>Changelog</h5>
 <hr>
 <blockquote>
+    <p>1.1.0</p>
+    <small>npm support and angular style changes.</small>
+</blockquote>
+<blockquote>
     <p>1.0.5</p>
     <small>Initial release.</small>
 </blockquote>
 
 <h5>Install</h5>
 <hr>
-<pre class="prettyprint">(bower): bower install angular-lodash-string</pre>
+<pre class="prettyprint">(bower): bower install angular-lodash-string
+(npm): npm install angular-lodash-string</pre>
 
 
 
