--- a/src/app/+resume/resume.component.html
+++ b/src/app/+resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="column wide">
+  <div class="column">
     <h2>Proficiency</h2>
     <div>
       Specialization
@@ -148,7 +148,7 @@
       <li>Microsoft Windows</li>
     </ul>
     Proficient
-    <ul>x
+    <ul>
       <li>Mac OSX</li>
       <li>Linux</li>
     </ul>
