--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,8 +18,8 @@ div.md-tab-header {
 }
 div.md-tab-body-wrapper {
   background-image: url('../../images/footer_lodyas.png');
-  display: flex;
-  flex: auto;
+  //display: flex;
+  //flex: auto;
   flex-direction: row;
   height: calc(100vh - 114px);
   overflow: auto !important;
