--- a/src/app/+resume/resume.component.scss
+++ b/src/app/+resume/resume.component.scss
@@ -1,15 +1,11 @@
 div.column {
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
   flex-wrap: wrap;
   margin-right: 24px;
   margin-left: 24px;
-  white-space: nowrap;
-  //min-width: 30vw;
-  .wide {
-    width: 300px;
-  }
-  md-card {
-    white-space: normal;
+  h2 {
+    white-space: nowrap;
   }
 }
