Add availability indicator

--- a/src/app/+home/home.component.html
+++ b/src/app/+home/home.component.html
@@ -5,5 +5,6 @@
       Mike Allison
     </h1>
 		<h2>Web Application Architect & Lead Developer</h2>
+    <h3><i class="fa fa-circle green"></i> Currently available for new opportunites</h3>
   </span>
 </div>
