--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@ div.md-tab-header {
   background-color: #424242;
   color: #9e9e9e;
 }
-div.md-tab-body-wrapper {
+div.content {
   background-image: url('../../images/footer_lodyas.png');
   //display: flex;
   //flex: auto;
