--- a/src/app/+contact/contact.component.html
+++ b/src/app/+contact/contact.component.html
@@ -1,5 +1,5 @@
 <md-nav-list>
-  <a md-list-item href="http://www.linkedin.com/profile/view?id=31355332" target="_blank" title="linked-in">
+  <a md-list-item href="Profilehttps://www.linkedin.com/in/mike-allison-544601a" target="_blank" title="linked-in">
     <md-icon fontSet="fa" fontIcon="fa-linkedin-square" class="fa-2x"></md-icon>
     LinkedIn
   </a>
