--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,10 +1,10 @@
 footer {
-  background-color: #424242;
   height: 64px;
   display: flex;
   width: 100vw;
   padding-left: 8px;
   padding-right: 8px;
+  border-top: 1px solid #e0e0e0;
     > div {
     display: flex;
     flex-direction: column;
