--- a/src/app/fourohfour/fourohfour.component.html
+++ b/src/app/fourohfour/fourohfour.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <span>
-	  <img src="/images/me.jpg" alt="amazing photo of me" class="circle" />
+	  <img src="assets/images/me.jpg" alt="amazing photo of me" class="circle" />
     <h1>
       404
     </h1>
