--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  color: #9e9e9e;
   font-family: "Roboto","Arial",sans-serif;
 }
 
@@ -16,29 +15,10 @@ body {
   justify-content: space-around;
 }
 
-nav {
-  background-color: #424242;
-  a, a:visited, a:active {
-      color: #9e9e9e;
-  }
-}
-md-ink-bar {
-  background-color: #9e9e9e;
-}
-
-md-nav-list > a > div.md-list-item {
-  color: #9e9e9e;
-}
-
-footer {
-  a, a:visited, a:active {
-    color: rgb(83, 109, 254);
-  }
-}
 
 /*fix for 2x fa md-icons*/
 md-icon.fa-2x {
-  padding-top: 6px;
+  padding-bottom: 10px;
   padding-right: 12px;
 }
 
