--- a/src/app/+blog/blog.component.html
+++ b/src/app/+blog/blog.component.html
@@ -1,10 +1,4 @@
-<div>
-  <span *ngIf="blogLoading">{{loadingText}}</span>
-  <md-nav-list>
-    <a md-list-item *ngFor="let post of posts" href="{{post.url}}" target="_blank">{{post.title}}</a>
-  </md-nav-list>
-</div>
-<div>
-  Site and Software updates posted here
-  <span class="right"><a href="http://mikeallisononline.wordpress.com" target="_blank">Website</a></span>
-</div>
+<p>
+  Site and Software updates hosted on
+  <span><a href="http://mikeallisononline.wordpress.com" target="_blank">Wordpress</a></span>.
+</p>
