--- a/src/app/+home/home.component.html
+++ b/src/app/+home/home.component.html
@@ -1,10 +1,15 @@
 <div class="container">
-  <span>
+  <div>
 	  <img src="assets/images/me.jpg" alt="amazing photo of me" class="circle" />
     <h1>
       Mike Allison
     </h1>
 		<h2>Web Application Architect & Lead Developer</h2>
-    <h3><i class="fa fa-circle red"></i> Not currently available for new opportunities</h3>
-  </span>
+    <h3 *ngIf="config|async">
+      <i class="fa fa-circle" [class.red]="!(config|async)?.available" [class.green]="(config|async)?.available"></i>
+      <span *ngIf="!(config|async)?.available; else elseBlock">Not currently</span>
+      <ng-template #elseBlock>Currently</ng-template>
+       available for new opportunities
+    </h3>
+  </div>
 </div>
