--- a/src/app/+home/home.component.scss
+++ b/src/app/+home/home.component.scss
@@ -4,7 +4,7 @@ div.container {
   height: 100%;
   justify-content: center;
   align-items: center;
-  > span {
+  > div {
     text-align: center;
     > img {
       height: 38vh;
