--- a/src/app/+admin/blog/blog.component.html
+++ b/src/app/+admin/blog/blog.component.html
@@ -1,21 +1,28 @@
 <div fxLayout="row">
-  <md-list>
-    <md-list-item *ngFor="let blog of blogList | async">
-      {{blog.title}}
-    </md-list-item>
-  </md-list>
-  <form fxLayout="column" fxFlexFill>
-    <md-input-container>
-      <label for="title">Title</label>
-      <input mdInput id="title">
-    </md-input-container>
-    <md-input-container>
+  <div>
+    <md-list>
+      <md-list-item *ngFor="let blog of blogList | async">
+        <a (click)="select(blog)">{{blog.title}}</a>
+      </md-list-item>
+      <md-list-item>
+        <a (click)="create()">Create new</a>
+      </md-list-item>
+    </md-list>
+  </div>
+  <div>
+    <form fxLayout="column" fxFlexFill *ngIf="post">
+      <md-slide-toggle name="enable" [(ngModel)]="post.enabled">Enable</md-slide-toggle>
+      <md-input-container>
+        <label for="title">Title</label>
+        <input mdInput id="title" name="title" [(ngModel)]="post.title">
+      </md-input-container>
+      <material-datepicker [(date)]="post.date"></material-datepicker>
       <label for="content">Content</label>
-      <textarea id="content" mdInput></textarea>
-    </md-input-container>
-    <div>
-      <button md-button (click)="getConfig()">Cancel</button>
-      <button md-button color="primary" (click)="save()">Save</button>
-    </div>
-  </form>
+      <div id="content" [froalaEditor] [(froalaModel)]="post.content"></div>
+      <div>
+        <button md-button (click)="cancel()">Cancel</button>
+        <button md-button color="primary" (click)="save()">Save</button>
+      </div>
+    </form>
+  </div>
 </div>
