--- a/src/app/+blog/blog.component.html
+++ b/src/app/+blog/blog.component.html
@@ -1,4 +1,8 @@
-<p>
-  Site and Software updates hosted on
-  <span><a href="http://mikeallisononline.wordpress.com" target="_blank">Wordpress</a></span>.
-</p>
+<div *ngFor="let blog of blogList | async" >
+  <div *ngIf="blog.enabled">
+    <h1>{{blog.title}}</h1>
+    <h5>Posted on {{blog.created | date: 'fullDate'}} by Mike Allison</h5>
+    <div [innerHTML]="blog.content"></div>
+    <a *ngIf="user" routerLink="/admin/blog">edit</a>
+  </div>
+</div>
