--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-<nav md-tab-nav-bar>
-  <a md-tab-link [routerLink]="['/home']" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive" class="home">
-        Mike Allison
+<nav mat-tab-nav-bar>
+  <a mat-tab-link [routerLink]="['/home']" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive" class="home">
+    Mike Allison
   </a>
-  <a md-tab-link [routerLink]="['/blog']" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
-      Blog
-  </a>
-  <a md-tab-link [routerLink]="['/projects']" routerLinkActive #rla3="routerLinkActive" [active]="rla3.isActive">
-      Projects
-  </a>
-  <a md-tab-link [routerLink]="['/resume']" routerLinkActive #rla4="routerLinkActive" [active]="rla4.isActive">
+  <a mat-tab-link [routerLink]="['/resume']" routerLinkActive #rla4="routerLinkActive" [active]="rla4.isActive">
     Resume
   </a>
-  <a md-tab-link [routerLink]="['contact']" routerLinkActive #rla5="routerLinkActive" [active]="rla5.isActive">
-      Contact
+<!--  <a mat-tab-link [routerLink]="['/blog']" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">-->
+<!--    Blog-->
+<!--  </a>-->
+<!--  <a mat-tab-link [routerLink]="['/projects']" routerLinkActive #rla3="routerLinkActive" [active]="rla3.isActive">-->
+<!--    Projects-->
+<!--  </a>-->
+  <a mat-tab-link [routerLink]="['contact']" routerLinkActive #rla5="routerLinkActive" [active]="rla5.isActive">
+    Contact
   </a>
 </nav>
 
