--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@ div.container {
   height: 100%;
   justify-content: center;
   align-items: center;
-  > span {
+  > div {
     text-align: center;
     > img {
       height: 38vh;
@@ -16,4 +16,10 @@ div.container {
       margin: 0 0 0 0 ;
     }
   }
+}
+.green {
+  color: #00AF33;
+}
+.red {
+  color: darkred;
 }
