--- a/src/app/admin/config/config.component.html
+++ b/src/app/admin/config/config.component.html
@@ -1,5 +1,5 @@
-<p>
-  <mat-slide-toggle [ngModel]="(config|async)?.available" (ngModelChange)="change('available', $event)">Available</mat-slide-toggle>
+<p *ngIf="config|async">
+  <mat-slide-toggle [ngModel]="config.available" (ngModelChange)="change('available', $event)">Available</mat-slide-toggle>
 </p>
 <button mat-button (click)="getConfig()">Cancel</button>
 <button mat-button color="primary" (click)="save()">Save</button>
