--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,6 +5,6 @@
   </a>
   <a mat-list-item href="mailto:mike@mikeallisononline.com" target="_blank" title="email">
     <fa-icon [icon]="faEnvelope" fontSet="fa" fontIcon="fa-envelope" class="fa-2x"></fa-icon>
-    Email - mike@mikeallisononline.com
+    Email - dj.mikeallison@gmail.com
   </a>
 </mat-nav-list>
