--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,8 +2,8 @@
   <mat-toolbar color="primary">
     <span fxFlex>Admin</span>
     <span *ngIf="user; else elseBlock">
-        <a href="javascript:;" (click)="logout()" matTooltip="{{user.auth.email}}">
-          <img src="{{user.auth.photoURL}}" style="height: 60px" class="circle">
+        <a href="javascript:;" (click)="logout()" matTooltip="{{user.email}}">
+          <img src="{{user.photoURL}}" style="height: 60px" class="circle">
         </a>
       </span>
     <ng-template #elseBlock>
