--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link [routerLink]="['/home']" routerLinkActive #rla1="routerLinkActive" [active]="rla1.isActive" class="home">
-    Mike Allison
+    Contact
   </a>
   <a mat-tab-link [routerLink]="['/resume']" routerLinkActive #rla4="routerLinkActive" [active]="rla4.isActive">
     Resume
@@ -11,9 +11,9 @@
 <!--  <a mat-tab-link [routerLink]="['/projects']" routerLinkActive #rla3="routerLinkActive" [active]="rla3.isActive">-->
 <!--    Projects-->
 <!--  </a>-->
-  <a mat-tab-link [routerLink]="['contact']" routerLinkActive #rla5="routerLinkActive" [active]="rla5.isActive">
-    Contact
-  </a>
+<!--  <a mat-tab-link [routerLink]="['contact']" routerLinkActive #rla5="routerLinkActive" [active]="rla5.isActive">-->
+<!--    Contact-->
+<!--  </a>-->
 </nav>
 
 <div class="content">
