--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,9 @@
 <footer>
   <div>&copy; Mike Allison {{year}}</div>
-  <div><span class="right">Powered by <a href="https://angular.io" target="_blank">Angular 9</a> on <a href="https://firebase.google.com" target="_blank">Firebase</a></span></div>
+  <div>
+    <span class="right">Powered by
+      <a href="https://angular.io" target="_blank">Angular 9</a> on
+      <a href="https://firebase.google.com" target="_blank">Firebase</a>
+    </span>
+  </div>
 </footer>
